Change background image, fix hearts jump to top page error

--- a/app/public/style.css
+++ b/app/public/style.css
@@ -6,7 +6,7 @@ html
 
 body
 {
-	background-image: url(images/bg8.jpg);
+	background-image: url(images/bg13.jpg);
 	background-size: 100% auto;
 	background-repeat: none;
 	min-height: 100vh;
@@ -18,6 +18,7 @@ body
 #bodyContainer
 {
 	background-color: rgb(0, 0, 102, 0.1);
+/*background-color: rgb(0, 0, 65,0.4);*/
 	min-height: 100vh;
 	position: relative;
 }
@@ -26,7 +27,7 @@ body
 
 #content
 {
-	margin-top: 17%;
+	margin-top: 20%;
 }
 
 h1
